[project]
name = "digital-signatures"
version = "0.1.0"
description = "A Python library for creating and verifying digital signatures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
]

[project.scripts]
digital-signatures = "digital_signatures:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
